--- a/workpath/app/front.yaml
+++ b/workpath/app/front.yaml
@@ -7,8 +7,8 @@ metadata:
 #    nginx.ingress.kubernetes.io/rewrite-target: /$1
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt"
-    nginx.ingress.kubernetes.io/enable-opentracing: "true"
-    zipkin-collector-host: zipkin.jaeger.svc.cluster.local
+#    nginx.ingress.kubernetes.io/enable-opentracing: "true"
+#    zipkin-collector-host: zipkin.jaeger.svc.cluster.local
 spec:
   tls:
     - hosts:
