--- a/.github/workflows/ci-queue-master.yml
+++ b/.github/workflows/ci-queue-master.yml
@@ -20,6 +20,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      GROUP: sockshopdemo 
+      COMMIT: ${{ github.sha }}
+      REPO: queue-master
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
