--- a/.github/workflows/ci-queue-master.yml
+++ b/.github/workflows/ci-queue-master.yml
@@ -41,11 +41,13 @@ jobs:
           architecture: x64 # (x64 or x86) - defaults to x64
 
       - name: Build jar
-        run: ./scripts/build.sh
+        run: |
+          CODE_DIR=$(cd $SCRIPT_DIR/..; pwd)
+          echo $CODE_DIR
+          $DOCKER_CMD run --rm -v $HOME/.m2:/root/.m2 -v $CODE_DIR:/usr/src/mymaven -w /usr/src/mymaven maven:3.2-jdk-8 mvn -DskipTests package
 
-      - name: Run unit tests
-        run: ./test/test.sh unit.py
-
+          cp $CODE_DIR/target/*.jar $CODE_DIR/docker/queue-master
+          
       # setup Docker buld action
       - name: Set up Docker Buildx
         id: buildx
