--- a/.github/workflows/ci-queue-master.yml
+++ b/.github/workflows/ci-queue-master.yml
@@ -47,6 +47,7 @@ jobs:
  
       - name: Build jar
         run: |
+          SCRIPT_DIR=$(dirname "$0")
           CODE_DIR=$(cd $SCRIPT_DIR/..; pwd)
           echo $CODE_DIR
           docker run --rm -v $HOME/.m2:/root/.m2 -v $CODE_DIR:/usr/src/mymaven -w /usr/src/mymaven maven:3.2-jdk-8 mvn -DskipTests package
