--- a/.github/workflows/ci-queue-master.yml
+++ b/.github/workflows/ci-queue-master.yml
@@ -47,12 +47,10 @@ jobs:
  
       - name: Build jar
         run: |
-          cd ..
           echo $(pwd)
-          tree
-          docker run --rm -v $HOME/.m2:/root/.m2 -v ./:/usr/src/mymaven -w /usr/src/mymaven maven:3.2-jdk-8 mvn -DskipTests package
+          docker run --rm -v $HOME/.m2:/root/.m2 -v /home/runner/work/endgame/endgame:/usr/src/mymaven -w /usr/src/mymaven maven:3.2-jdk-8 mvn -DskipTests package
 
-          cp ./target/*.jar $CODE_DIR/docker/queue-master
+          cp ./target/*.jar /home/runner/work/endgame/endgame/docker/queue-master
                 
       - name: Build image and push to ttl.sh
         uses: docker/build-push-action@v3
