--- a/workpath/app/kustomization.yaml
+++ b/workpath/app/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
 namespace: sock-shop
 images:
 - name: weaveworksdemos/carts
-  newName: ttl.sh/carts-cfe678b8e4f7e6ba7db5a440f9e369f56b959ef2
-  newTag: 2h
+  newName: weaveworksdemos/carts
+  newTag: 0.4.8
 - name: weaveworksdemos/queue-master
   newName: ttl.sh/queue-master-53d46feea3c4bdf2cfe0e9de7188b07dfe7684ca
   newTag: 2h
