--- a/.github/workflows/ci-queue-orders.yml
+++ b/.github/workflows/ci-queue-orders.yml
@@ -52,6 +52,9 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B -DskipTests package --file pom.xml
+        
+      - name: Copy jar
+        run: cp app.jar ./docker/orders/
                 
       - name: Build image and push to ttl.sh
         uses: docker/build-push-action@v3
