--- a/.github/workflows/ci-queue-orders.yml
+++ b/.github/workflows/ci-queue-orders.yml
@@ -38,32 +38,19 @@ jobs:
         with:
           java-version: '1.8' # The JDK version to make available on the path.
 
-       # setup Docker buld action
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Build jar
+        run: |
+          echo $(pwd)
+          IMAGE=orders
+          CODE_DIR=/home/runner/work/endgame/endgame
+          docker run --rm -v $HOME/.m2:/root/.m2 -v $CODE_DIR:/usr/src/mymaven -w /usr/src/mymaven maven:3.2-jdk-8 mvn -DskipTests package
+          cp -r $CODE_DIR/docker $CODE_DIR/target/docker/
+          cp -r $CODE_DIR/target/*.jar $CODE_DIR/target/docker/${IMAGE}
 
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
 
-      - name: Build with Maven
-        run: mvn -B -DskipTests package --file pom.xml -DoutputDirectory=/home/runner/work/endgame/endgame/docker/orders/
-      
-      - name: Test
-        run: tree /home/runner/work/endgame/endgame/docker
-      
-      - name: Build image and push to ttl.sh
-        uses: docker/build-push-action@v3
-        with:
-          # relative path to the place where source code with Dockerfile is located
-          context: ./docker/orders/
-          # Note: tags has to be all lower-case
-          tags: ttl.sh/orders-${{ github.sha }}:2h 
-          push: true
+          docker build -t ttl.sh/orders-${{ github.sha }}:2h -f $BUILD_DIR/docker/orders/Dockerfile $CODE_DIR/target/docker/${IMAGE}
+          docker push ttl.sh/orders-${{ github.sha }}:2h
+
 
   deploy:
     name: Update
