--- a/.github/workflows/ci-queue-payment.yml
+++ b/.github/workflows/ci-queue-payment.yml
@@ -60,10 +60,14 @@ jobs:
           export BUILD_DATE=`date +%Y-%m-%dT%T%z`
           echo $(pwd)
           CODE_DIR=/home/runner/work/endgame/endgame
+          
+          sed '/^FROM golang.*/a RUN apk add ca-certificates && update-ca-certificates' $CODE_DIR/docker/payment/Dockerfile
+          cat $CODE_DIR/docker/payment/Dockerfile
+          
           cp -r $CODE_DIR/cmd/ $CODE_DIR/docker/payment/cmd/
           cp $CODE_DIR/*.go $CODE_DIR/docker/payment/
           mkdir $CODE_DIR/docker/payment/vendor && cp $CODE_DIR/vendor/manifest $CODE_DIR/docker/payment/vendor/
-
+          
           docker build -t ttl.sh/payment-dev -f $CODE_DIR/docker/payment/Dockerfile $CODE_DIR/docker/payment;
           docker create --name payment ttl.sh/payment-dev
           docker cp payment:/app $CODE_DIR/docker/payment/app
