--- a/.github/workflows/ci-queue-payment.yml
+++ b/.github/workflows/ci-queue-payment.yml
@@ -48,6 +48,9 @@ jobs:
           go get -u github.com/mattn/goveralls
           go get -u github.com/FiloSottile/gvt
           gvt restore
+                    
+          sed '/^FROM golang.*/a RUN apk add ca-certificates && update-ca-certificates' /home/runner/work/endgame/endgame/docker/payment/Dockerfile
+          cat /home/runner/work/endgame/endgame/docker/payment/Dockerfile
 
        # setup Docker buld action
       - name: Set up Docker Buildx
@@ -60,9 +63,6 @@ jobs:
           export BUILD_DATE=`date +%Y-%m-%dT%T%z`
           echo $(pwd)
           CODE_DIR=/home/runner/work/endgame/endgame
-          
-          sed '/^FROM golang.*/a RUN apk add ca-certificates && update-ca-certificates' $CODE_DIR/docker/payment/Dockerfile
-          cat $CODE_DIR/docker/payment/Dockerfile
           
           cp -r $CODE_DIR/cmd/ $CODE_DIR/docker/payment/cmd/
           cp $CODE_DIR/*.go $CODE_DIR/docker/payment/
