--- a/.github/workflows/ci-queue-payment.yml
+++ b/.github/workflows/ci-queue-payment.yml
@@ -49,7 +49,7 @@ jobs:
           go get -u github.com/FiloSottile/gvt
           gvt restore
                     
-          sed '/^FROM golang.*/a RUN apt update && apt-get install --reinstall ca-certificates libgnutls30 -y && update-ca-certificates' /home/runner/work/endgame/endgame/docker/payment/Dockerfile > /home/runner/work/endgame/endgame/docker/payment/Dockerfile.changed
+          sed '/^FROM golang.*/a RUN apt update && apt-get install --reinstall ca-certificates -y && update-ca-certificates' /home/runner/work/endgame/endgame/docker/payment/Dockerfile > /home/runner/work/endgame/endgame/docker/payment/Dockerfile.changed
           cat /home/runner/work/endgame/endgame/docker/payment/Dockerfile
 
        # setup Docker buld action
