--- a/workpath/app/complete-demo.yaml
+++ b/workpath/app/complete-demo.yaml
@@ -841,7 +841,7 @@ spec:
   storageClassName: yc-network-hdd
   resources:
     requests:
-      storage: 300Mi
+      storage: 1Gi
 
 ---
 apiVersion: apps/v1
