--- a/workpath/app/complete-demo.yaml
+++ b/workpath/app/complete-demo.yaml
@@ -386,6 +386,21 @@ spec:
   selector:
     name: orders
 ---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-sock-orders-db
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: yc-network-hdd
+  resources:
+    requests:
+      storage: 1Gi
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -421,10 +436,15 @@ spec:
         volumeMounts:
         - mountPath: /tmp
           name: tmp-volume
+        - name: ps-sock-orders-db
+          mountPath: /data
       volumes:
         - name: tmp-volume
           emptyDir:
             medium: Memory
+        - name: ps-sock-orders-db
+          persistentVolumeClaim:
+            claimName: pvc-sock-orders-db
       nodeSelector:
         beta.kubernetes.io/os: linux
 ---
