--- a/workpath/app/complete-demo.yaml
+++ b/workpath/app/complete-demo.yaml
@@ -149,6 +149,9 @@ spec:
       containers:
       - name: catalogue
         image: weaveworksdemos/catalogue:0.3.5
+        env:
+         - name: ZIPKIN
+           value: http://zipkin.jaeger.svc.cluster.local:9411/api/v1/spans
         command: ["/app"]
         args:
         - -port=80
@@ -483,6 +486,9 @@ spec:
       containers:
       - name: payment
         image: weaveworksdemos/payment:0.4.3
+        env:
+        - name: ZIPKIN
+          value: http://zipkin.jaeger.svc.cluster.local:9411/api/v1/spans
         resources:
           limits:
             cpu: 200m
@@ -796,6 +802,11 @@ spec:
       containers:
       - name: user
         image: weaveworksdemos/user:0.4.7
+        env:
+         - name: MONGO_HOST
+           value: user-db:27017
+         - name: ZIPKIN
+           value: http://zipkin.jaeger.svc.cluster.local:9411/api/v1/spans
         resources:
           limits:
             cpu: 300m
