--- a/workpath/loki/values.yaml
+++ b/workpath/loki/values.yaml
@@ -33,6 +33,20 @@ grafana:
       - name: Prometheus
         type: prometheus
         url: http://vmcluster-victoria-metrics-cluster-vmselect.default.svc.cluster.local:8481/select/0/prometheus/
+
+  dashboardProviders:
+   dashboardproviders.yaml:
+     apiVersion: 1
+     providers:
+     - name: 'default'
+       orgId: 1
+       folder: ''
+       type: file
+       disableDeletion: true
+       editable: true
+       options:
+         path: /var/lib/grafana/dashboards/default
+
   dashboards:
     default:
       victoriametrics:
