--- a/.github/workflows/ci-yandex-initial-sh.yml
+++ b/.github/workflows/ci-yandex-initial-sh.yml
@@ -40,6 +40,7 @@ jobs:
 
      - name: Run YC create
        run: |
+        source "/home/runner/.bashrc"
         yc config set cloud-id ${{ secrets.YC_CLOUD_ID }}            
         yc config set folder-id ${{ secrets.YC_FOLDER_ID }}
         yc config set compute-default-zone  ${{ secrets.YC_TOKEN }}
