--- a/.github/workflows/ci-yandex-initial-sh.yml
+++ b/.github/workflows/ci-yandex-initial-sh.yml
@@ -40,10 +40,8 @@ jobs:
 
      - name: Run YC create
        run: |
-        /opt/yс/bin/yc config set cloud-id ${{ secrets.YC_CLOUD_ID }}            
-        /opt/yс/bin/yc config set folder-id ${{ secrets.YC_FOLDER_ID }}
+        /opt/yс/bin/yc init --token ${{ secrets.YC_ZONE }} --cloud-id ${{ secrets.YC_CLOUD_ID }} --folder-id ${{ secrets.YC_FOLDER_ID }}
         /opt/yс/bin/yc config set compute-default-zone  ${{ secrets.YC_TOKEN }}
-        /opt/yс/bin/yc config set token ${{ secrets.YC_ZONE }}
 
         export CLUSTER_NAME=$(/opt/yс/bin/yc managed-kubernetes cluster list --format json | grep name | awk '{ print $2 }' | tr -dc '[0-9A-Za-z-]')
 
