--- a/.github/workflows/ci-yandex-initial-sh.yml
+++ b/.github/workflows/ci-yandex-initial-sh.yml
@@ -44,6 +44,7 @@ jobs:
        run: |
         echo "$YC_FILE" >> yckey.json
         /opt/yc/bin/yc config profile create default
+        /opt/yc/bin/yc config set folder-id ${{ secrets.YC_FOLDER_ID }}
         /opt/yc/bin/yc config set service-account-key yckey.json
 
         export CLUSTER_NAME=$(/opt/yc/bin/yc managed-kubernetes cluster list --format json | grep name | awk '{ print $2 }' | tr -dc '[0-9A-Za-z-]')
